# MEDGraphics

./: .gitignore  CMakeLists.txt
assets/: 1.pgm  2.ppm  qbic.ppm
assets/shaders/: default.frag  default.vert  default4.3.frag  default4.3.vert  grid.frag  grid.vert  rects.frag  rects.vert
assets/shaders/compute/: gradient.comp
src/: CMakeLists.txt  process_assets.cpp  start.cpp  stb_image_write.h  textureTest.cpp
src/core/: Assets.cpp  Assets.h  Context.cpp  Context.h  ContextCallbacks.cpp  ContextCallbacks.h  CyclicImageFileSpan.cpp  CyclicImageFileSpan.h  GLFWWindowProvider.cpp  GLFWWindowWrapper.cpp  GLFWWindowWrapper.h  ImageFile.cpp  ImageFile.h  ImageFileStorage.cpp  ImageFileStorage.h  MyApp.cpp  MyApp.h  MyLayout.cpp  MyLayout.h  ObservableValue.cpp  ObservableValue.h  R.h  RasterComputing.cpp  RasterComputing.h  WindowWrapper.h
src/exp/: ExpApp.cpp  ExpApp.h  experiment.cpp
src/gl/: FontRenderer.cpp  FontRenderer.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  utils.cpp  utils.h
src/img/: AbstractRaster.h  GrayPixel.h  Pixel.h  PixelRGBA8.h  PixelType.h  RGBAData.h  RGBAPixel.h  RGBARaster.h  Raster.h  imageLoader.cpp  imageLoader.h  rgba.h
src/math/: math_utils.cpp  math_utils.h  vec3.cpp  vec3.h
src/pnm/: PNMHeader.h  PNMImage.cpp  PNMImage.h  PNMMeta.h  main.cpp  pnmUtils.cpp  pnmUtils.h
src/pnm/utils/: fileUtil.cpp  fileUtil.h  pnmUtil.cpp  pnmUtil.h
src/utils/: OsLock.cpp  OsLock.h  R.h  encoding.cpp  explorerUtils.cpp  explorerUtils.h  file.cpp  file.h  ft_error_check.cpp  ft_error_check.h  logging.cpp  logging.h  measureFps.cpp  measureFps.h  measureTime.cpp  measureTime.h  random.cpp  random.h  windowSize.cpp  windowSize.h
src/view/: Assets.cpp  Assets.h  BgRenderer.cpp  BgRenderer.h  ClickEvent.h  Context.cpp  Context.h  ImageView.cpp  ImageView.h  LinearLayout.cpp  LinearLayout.h  ShaderProgram.cpp  ShaderProgram.h  Style.cpp  Style.h  View.cpp  View.h  ViewGroup.cpp  ViewGroup.h
src/widget/: BgRenderer.cpp  BgRenderer.h  DropDownView.cpp  DropDownView.h  EditText.cpp  EditText.h  HistogramView.cpp  HistogramView.h  IconView.cpp  IconView.h  ImageView.cpp  ImageView.h  MessageView.cpp  MessageView.h  RootView.cpp  RootView.h  SelectView.cpp  SelectView.h  TextView.cpp  TextView.h  WidgetAttributes.h  WindowBar.cpp  WindowBar.h
tools/: CMakeLists.txt  process_assets.cpp  test_compute_shader.cpp  test_file.cpp  test_list_supported_encodings.cpp  test_locale.cpp  test_smart_pointers.cpp  test_string.cpp  test_texture.cpp  test_window.cpp
tools/bench/: bench_jpeg.cpp
tools/test_static_objects/: main.cpp  other_file.cpp  other_file.h  static_object.cpp  static_object.h
view-lib/include/img/: AbstractRaster.h  ColorModels.cpp  ColorModels.h  DitheringMethods.h  ImageProcessing.h  ModernColorModel.h  PNGImage.h  PNMImage.h  Pixel.h  PixelCMY8.h  PixelGray8.h  PixelHSL.h  PixelHSL8.h  PixelHSV.h  PixelRGB8.h  PixelRGBA8.h  PixelType.h  PixelYCbCr601.h  PixelYCbCr709.h  PixelYCoCg.h  Raster.h  colorModelConverter.h  imageLoader.h  pngUtils.h  pnmUtils.h  rgba.h
view-lib/include/img/format/: jpeg_utils.h
view-lib/include/utils/: FontRenderer.h  ImageFormats.h  OsLock.h  SaveFormat.h  String.h  Texture.h  encoding.h  explorer_utils.h  file.h  ft_error_check.h  gl_utils.h  logging.h  measureFps.h  pixelTypeMethods.h  zlib_utils.h
view-lib/include/view/: Dialog.h  MouseEvent.h  Style.h  View.h  ViewGroup.h
view-lib/include/view/core/: Assets.h  Context.h  ContextCallbacks.h  GLFWWindowProvider.h  GLFWWindowWrapper.h  RootViewManager.h  WindowWrapper.h
view-lib/include/view/widget/: LinearLayout.h
view-lib/src/: CMakeLists.txt
view-lib/src/img/: ColorModels.cpp  DitheringMethods.cpp  ImageProcessing.cpp  ModernColorModel.cpp  PNGImage.cpp  PNMImage.cpp  PixelCMY8.cpp  PixelGray8.cpp  PixelHSL.cpp  PixelHSL8.cpp  PixelHSV.cpp  PixelRGB8.cpp  PixelRGBA8.cpp  PixelYCbCr601.cpp  PixelYCbCr709.cpp  PixelYCoCg.cpp  colorModelConverter.cpp  imageLoader.cpp  pngUtils.cpp  pnmUtils.cpp
view-lib/src/img/format/: jpeg_utils.cpp
view-lib/src/utils/: FontRenderer.cpp  ImageFormats.cpp  OsLock.cpp  SaveFormat.cpp  ShaderProgram.cpp  Texture.cpp  encoding.cpp  explorer_utils.cpp  file.cpp  ft_error_check.cpp  gl_utils.cpp  logging.cpp  measureFps.cpp  measureTime.cpp  pixelTypeMethods.cpp  random.cpp  zlib_utils.cpp
view-lib/src/view/: Dialog.cpp  Style.cpp  View.cpp  ViewGroup.cpp
view-lib/src/view/core/: Assets.cpp  Context.cpp  ContextCallbacks.cpp  GLFWWindowProvider.cpp  GLFWWindowWrapper.cpp  RootViewManager.cpp
view-lib/src/view/widget/: LinearLayout.cpp
